c/examples/writing-a-c-compiler-tests/tests/chapter_6/valid/extra_credit/postfix_in_ternary.c
int main(void) {
    int x = 10;
    x - 10 ? 0 : x--;
    return x;
}