c/examples/writing-a-c-compiler-tests/tests/chapter_6/invalid_semantics/extra_credit/use_label_as_variable.c
int main(void) {
    int x = 0;
    a:
    x = a;
    return 0;
}